--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "floss-order",
   "license": "ISC",
   "devDependencies": {
+    "html-webpack-plugin": "^4.3.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
